# pokeperp

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
docs/: dashboard.md  inception-candidates.md  mainnet-runbook.md  methodology.md  oracle.md  perp-engine.md  publisher.md  secrets.md
docs/brand/: build-banner.ps1  preview.html
migrations/: deploy.ts
programs/oracle/: Cargo.toml
programs/oracle/src/: errors.rs  lib.rs  state.rs
programs/perp-engine/: Cargo.toml
programs/perp-engine/src/: errors.rs  lib.rs  state.rs
services/dashboard/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
services/dashboard/.claude/: launch.json
services/dashboard/app/: globals.css  layout.tsx  page.tsx
services/dashboard/app/docs/: layout.tsx  page.tsx
services/dashboard/app/portfolio/: page.tsx
services/dashboard/app/trade/: page.tsx
services/dashboard/app/updates/: page.tsx
services/dashboard/components/: AnnouncementBanner.tsx  CardImage.tsx  ConstituentStrip.tsx  DevnetBanner.tsx  DocsNav.tsx  FundingChart.tsx  IndexCard.tsx  MarkVsIndexChart.tsx  Markdown.tsx  MarketState.tsx  Nav.tsx  Pokeball.tsx  PokeperpLogo.tsx  RealizedPnl.tsx  TokenCa.tsx  TopMovers.tsx  TradeIndexBar.tsx  TradePanel.tsx  TypeBadge.tsx  WalletProvider.tsx  XIcon.tsx
services/dashboard/content/docs/: index-methodology.md  oracle.md  overview.md  perpetuals.md
services/dashboard/lib/: anchor.ts  cards.ts  docs.ts  format.ts  oracle.ts  perp.ts  trade.ts  updates.ts
services/dashboard/lib/idl/: oracle.json  oracle.ts  perp_engine.json  (+1 more)
services/dashboard/scripts/: aggregate-empty-mainnet.ts  aggregate-mainnet-postmigration.ts  deposit-insurance-mainnet.ts  expand-to-50.ts  fix-pmt50-card-mappings.ts  init-localnet.ts  init-mainnet.ts  reaggregate-with-both-publishers.ts  reaggregate-with-pub3.ts  reaggregate-with-pub4.ts  register-publisher-mainnet.ts  register-second-publisher.ts  rpc.ts  scrape-50-candidates.ts  scrape-retries.ts  seed-index.ts  set-pause-mainnet.ts  set-phase-mainnet.ts  set-risk-params-mainnet.ts  status-mainnet.ts  substitute-broken-pmt50-slots.ts  test-modify.ts  test-trade.ts  validate-modify-devnet.ts
services/indexer/: .gitignore  package-lock.json  package.json  railway.toml  tsconfig.json
services/indexer/src/: index.ts
services/keeper/: .gitignore  package-lock.json  package.json  railway.toml  tsconfig.json
services/keeper/src/: index.ts
services/monitor/: package-lock.json  package.json  railway.toml
services/monitor/src/: index.ts
services/publisher/: .dockerignore  Cargo.toml  Dockerfile  README.md  railway.toml
services/publisher/devnet-keys/: publisher-2.json  publisher-3.json  publisher-4.json
services/publisher/examples/: publisher.devnet.toml  publisher.example.toml  publisher.localnet.toml  publisher.mainnet.toml
services/publisher/src/: config.rs  main.rs  merkle.rs  methodology.rs  state.rs  submit.rs
services/publisher/src/sources/: card_codex.rs  ebay_browse.rs  mod.rs  pricecharting.rs  scraper.rs
services/scraper/: Dockerfile  package-lock.json  package.json  railway.toml  test-oxylabs.ts  tsconfig.json
services/scraper/src/: index.ts
tests/: oracle.ts  perp-engine.ts
(+13 files in other folders)
