[package]
name = "pokeperp-publisher"
version = "0.1.0"
edition = "2021"
description = "Off-chain publisher service for the Pokeperp oracle"

[[bin]]
name = "pokeperp-publisher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
solana-client = "1.18"
solana-sdk = "1.18"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
