[package]
name = "pokeperp-publisher"
version = "0.1.0"
edition = "2021"
description = "Off-chain publisher service for the Pokeperp oracle"

# Standalone — not part of the on-chain Anchor workspace at the repo root.
[workspace]

[[bin]]
name = "pokeperp-publisher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
# Pinned to 0.11 because reqwest 0.12 pulls rustls 0.22 which requires zeroize >=1.6,
# conflicting with curve25519-dalek 3 (zeroize <1.4).
reqwest = { version = "=0.11.27", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
solana-client = "=1.18.26"
solana-sdk = "=1.18.26"
# Pin zeroize: curve25519-dalek 3 requires >=1,<1.4; newer transitive deps want ^1.3.
# 1.3.0 is the unique version satisfying both — without this pin cargo locks 1.0.0 first
# and refuses to backtrack.
zeroize = "=1.3.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
